# machine_id

./: CMakeLists.txt  keygen.cpp  machineid.cpp
base/: CMakeLists.txt  base64.cpp  datatypes.h  file_utils.cpp  file_utils.hpp
os/: CMakeLists.txt  cpuid.h
os/linux/: cpu_info.cpp
os/windows/: os_win.cpp
